[package]
name = "lector"
version = "0.3.1"
edition = "2024"
description = "A terminal screen reader"
license = "MIT"
repository = "https://github.com/n0ot/lector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive", "env"] }
dirs = "6.0.0"
emojis = "0.8.0"
lazy_static = "1.5.0"
mio = { version = "1.1.1", features = ["os-ext", "os-poll"] }
nix = { version = "0.30.1", features = ["term"] }
phf = { version = "0.13.1", features = ["macros"] }
ptyprocess = "0.5.0"
regex = { version = "1.10.5", default-features = false, features = [
    "std",
    "perf",
    "unicode-bool",
] }
signal-hook = "0.3.17"
signal-hook-mio = { version = "0.2.3", features = ["support-v1_0"] }
similar = { version = "2.5.0", features = ["unicode"] }
termsize = "0.1.7"
unicode-segmentation = "1.11.0"
vt100 = "0.16.2"
vte = "0.15.0"
mlua = { version = "0.11", features = ["luajit", "vendored"] }
tts = "0.26.3"

[features]
cargo-clippy = []

[target.'cfg(target_os = "macos")'.dependencies]
cocoa-foundation = "0.2"
core-foundation = "0.10"
objc = { version = "0.2", features = ["exception"] }
