[package]
name = "lector-tts"
version = "0.2.0"
edition = "2021"
description = "TTS engine for the Lector screen reader"
license = "MIT"
repository = "https://github.com/n0ot/lector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tts = "0.25.6"
anyhow = "1.0.77"

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2", features = ["exception"] }
cocoa-foundation = "0.1"
cocoa = "0.25.0"
