[package]
name = "lector-tts"
version = "0.3.0"
edition = "2024"
description = "TTS engine for the Lector screen reader"
license = "MIT"
repository = "https://github.com/n0ot/lector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tts = "0.26.0"
anyhow = "1.0.86"

[features]
# Used by objc crate macros, see https://github.com/rust-lang/rust-clippy/issues/12131
# and https://github.com/rust-lang/rust/issues/120360
cargo-clippy = []

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2.7", features = ["exception"] }
cocoa-foundation = "0.2.1"
cocoa = "0.26.1"
